hard-gists/712c270355b6c2642600/run.log
=== Docker Run Log for 712c270355b6c2642600 ===
Started at: Mi 29. Okt 17:00:58 CET 2025

[2025-10-29 17:00:58] START: Running container for 712c270355b6c2642600
[2025-10-29 17:00:59] SUCCESS: Container 9351934c646b3b770d68fc315259595eb3e55875ae15713e78559a05d551d1a6 started for 712c270355b6c2642600
=== Container logs for 712c270355b6c2642600 ===
  File "/snippet.py", line 26
    print 'linked!'
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 712c270355b6c2642600 ===
[2025-10-29 17:01:01] INFO: Container 9351934c646b3b770d68fc315259595eb3e55875ae15713e78559a05d551d1a6 has stopped
